--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
     <p>Der Gewinn umfasst Sachpreise, Gutscheine, Geldpreise. Eine Barauszahlung (von Sachpreisen und/oder Gutscheinen) oder Übertragung des Gewinns auf Dritte ist ausgeschlossen.</p>
 
     <h2>7. Datenschutz</h2>
-    <p>Die im Rahmen des Gewinnspiels erhobenen personenbezogenen Daten (z. B. Name, E-Mail-Adresse) werden ausschließlich zur Durchführung des Gewinnspiels und zur Benachrichtigung der Gewinner verwendet. Nach Abschluss des Gewinnspiels werden die Daten gelöscht, sofern keine ausdrückliche Einwilligung zur weiteren Nutzung vorliegt. Weitere Informationen zum Datenschutz sind in der <a href="https://berufskolleg-geldern.github.io/mitfahrzentrale/">Datenschutzerklärung</a> einsehbar.</p>
+    <p>Die im Rahmen des Gewinnspiels erhobenen personenbezogenen Daten Name, E-Mail-Adresse werden ausschließlich zur Durchführung des Gewinnspiels und zur Benachrichtigung der Gewinner verwendet. Nach Abschluss des Gewinnspiels werden die Daten gelöscht, sofern keine ausdrückliche Einwilligung zur weiteren Nutzung vorliegt. Weitere Informationen zum Datenschutz sind in der <a href="https://berufskolleg-geldern.github.io/mitfahrzentrale/">Datenschutzerklärung</a> einsehbar.</p>
 
     <h2>8. Haftungsausschluss</h2>
     <p>Der Veranstalter übernimmt keine Haftung für technische Störungen, die eine Teilnahme am Gewinnspiel verhindern könnten, oder für eine temporäre Nichtverfügbarkeit der BK-XMAS App.</p>
 
     <h2>9. Änderung und vorzeitige Beendigung</h2>
-    <p>Der Veranstalter behält sich das Recht vor, das Gewinnspiel jederzeit aus wichtigen Gründen (z. B. bei technischen Störungen oder rechtlichen Hürden) zu ändern oder vorzeitig zu beenden.</p>
+    <p>Der Veranstalter behält sich das Recht vor, das Gewinnspiel jederzeit aus wichtigen Gründen z. B. bei technischen Störungen oder rechtlichen Hürden zu ändern oder vorzeitig zu beenden.</p>
 
     <h2>10. Keine Verbindung zu Apple</h2>
     <p>Dieses Gewinnspiel steht in keiner Verbindung zu Apple und wird in keiner Weise von Apple gesponsert, unterstützt oder organisiert. Apple ist nicht für die Durchführung des Gewinnspiels verantwortlich.</p>
